pictures now correct size and overflow text has ellipsis

--- a/phonegap_website/www/css/agency.css
+++ b/phonegap_website/www/css/agency.css
@@ -1086,10 +1086,9 @@ h4 {
     display: block; /* Fallback for non-webkit */
     display: -webkit-box;
     max-width: 400px;
-    height: 50px; /* Fallback for non-webkit */
+    /*height: 50px; *//* Fallback for non-webkit */
     font-size: 20px;
-    display: flex;
-    align-items: center;
+
     line-height: 1.2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
